tests/ui/rust-2024/unsafe-attributes/in_2024_compatibility.rs
#![deny(rust_2024_compatibility)]

#[no_mangle]
//~^ ERROR: unsafe attribute used without unsafe
//~| WARN this is accepted in the current edition
extern "C" fn foo() {}

fn main() {}
